# leanSnappy

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: __init__.py
tests/: __init__.py  test_snappy.py
