[build-system]
requires = ["hatchling>=1.25.0,<2"]
build-backend = "hatchling.build"

[project]
name = "py-snappy"
version = "0.1.0"
description = "Pure Python Snappy compression library"
readme = "README.md"
authors = [
    { name = "Thomas Coratger", email = "thomas.coratger@ethereum.org" },
]
keywords = [
    "snappy",
    "compression",
    "decompression",
    "lz77",
    "google",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/tcoratger/py-snappy"
Source = "https://github.com/tcoratger/py-snappy"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [".*", "tests/", "testdata/"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "A", "N", "D", "C"]
fixable = ["I", "B", "E", "F", "W", "D", "C"]
ignore = ["D205", "D203", "D212", "D415", "C901", "A005", "C420"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "F401", "F403"]

[tool.pytest.ini_options]
minversion = "8.3.3"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.uv]
required-version = ">=0.7.0"

[dependency-groups]
test = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-xdist>=3.6.1,<4",
]
lint = [
    "ruff>=0.13.2,<1",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]
